[gd_scene load_steps=26 format=2]

[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://crate.png" type="Texture" id=3]
[ext_resource path="res://griffon.png" type="Texture" id=4]
[ext_resource path="res://dungeon_tileset.tres" type="TileSet" id=5]
[ext_resource path="res://CameraFollow.gd" type="Script" id=6]
[ext_resource path="res://blob.png" type="Texture" id=7]
[ext_resource path="res://Enemy.gd" type="Script" id=8]
[ext_resource path="res://aimer.png" type="Texture" id=9]
[ext_resource path="res://Protagonist Parts/Left Arm Upper.png" type="Texture" id=10]
[ext_resource path="res://Protagonist Parts/Pelvis.png" type="Texture" id=11]
[ext_resource path="res://Protagonist Parts/Left Leg Upper.png" type="Texture" id=12]
[ext_resource path="res://Protagonist Parts/Left Leg Lower.png" type="Texture" id=13]
[ext_resource path="res://Protagonist Parts/Right Leg Upper.png" type="Texture" id=14]
[ext_resource path="res://Protagonist Parts/Right leg Lower.png" type="Texture" id=15]
[ext_resource path="res://Protagonist Parts/Bow.png" type="Texture" id=16]
[ext_resource path="res://Protagonist Parts/Right Arm Lower.png" type="Texture" id=17]
[ext_resource path="res://Protagonist Parts/Upper Right Arm.png" type="Texture" id=18]
[ext_resource path="res://Protagonist Parts/Torso.png" type="Texture" id=19]
[ext_resource path="res://Protagonist Parts/Neck.png" type="Texture" id=20]
[ext_resource path="res://Protagonist Parts/Left Arm Lower.png" type="Texture" id=21]
[ext_resource path="res://Protagonist Parts/Head.png" type="Texture" id=22]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 600 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 4000, 10 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 21.5, 19 )

[sub_resource type="Animation" id=4]
resource_name = "Idle"
tracks/0/type = "value"
tracks/0/path = NodePath("Pelvis/BoneTorso:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}

[node name="Dungeon" type="Node2D"]

[node name="Level" type="Node2D" parent="."]
z_index = -1000

[node name="TileMap" type="TileMap" parent="Level"]
tile_set = ExtResource( 5 )
cell_size = Vector2( 50, 50 )
format = 1
tile_data = PoolIntArray( 0, 19, 0, 1, 19, 0, 2, 19, 0, 3, 19, 0, 4, 19, 0, 5, 19, 0, 6, 19, 0, 7, 19, 0, 8, 19, 0, 9, 19, 0, 10, 19, 0, 11, 19, 0, 12, 19, 0, 13, 19, 0, 14, 19, 0, 15, 19, 0, 16, 19, 0, 17, 19, 0, 18, 19, 0, 19, 19, 0, 20, 19, 0, 21, 19, 0, 22, 19, 0, 23, 19, 0, 24, 19, 0, 25, 19, 0, 26, 19, 0, 27, 19, 0, 28, 19, 0, 29, 19, 0, 30, 19, 0, 31, 19, 0, 32, 19, 0, 33, 19, 0, 34, 19, 0, 35, 19, 0, 36, 19, 0, 37, 19, 0, 38, 19, 0, 39, 19, 0, 40, 19, 0, 41, 19, 0, 42, 19, 0, 43, 19, 0, 44, 19, 0, 45, 19, 0, 46, 19, 0, 47, 1, 0, 48, 1, 0, 49, 1, 0, 50, 1, 0, 51, 1, 0, 52, 1, 0, 65536, 19, 0, 65537, 19, 0, 65538, 19, 0, 65539, 19, 0, 65540, 19, 0, 65541, 19, 0, 65542, 19, 0, 65543, 19, 0, 65544, 19, 0, 65545, 19, 0, 65546, 19, 0, 65547, 19, 0, 65548, 19, 0, 65549, 19, 0, 65550, 19, 0, 65551, 19, 0, 65552, 19, 0, 65553, 19, 0, 65554, 19, 0, 65555, 19, 0, 65556, 19, 0, 65557, 19, 0, 65558, 19, 0, 65559, 19, 0, 65560, 19, 0, 65561, 19, 0, 65562, 19, 0, 65563, 19, 0, 65564, 19, 0, 65565, 19, 0, 65566, 19, 0, 65567, 19, 0, 65568, 19, 0, 65569, 19, 0, 65570, 19, 0, 65571, 19, 0, 65572, 19, 0, 65573, 19, 0, 65574, 19, 0, 65575, 19, 0, 65576, 19, 0, 65577, 19, 0, 65578, 19, 0, 65579, 19, 0, 65580, 19, 0, 65581, 19, 0, 65582, 19, 0, 131072, 16, 0, 131073, 16, 0, 131074, 16, 0, 131075, 16, 0, 131076, 16, 0, 131077, 16, 0, 131078, 16, 0, 131079, 16, 0, 131080, 16, 0, 131081, 16, 0, 131082, 16, 0, 131083, 16, 0, 131084, 16, 0, 131085, 16, 0, 131086, 16, 0, 131087, 16, 0, 131088, 16, 0, 131089, 16, 0, 131090, 16, 0, 131091, 16, 0, 131092, 16, 0, 131093, 16, 0, 131094, 16, 0, 131095, 16, 0, 131096, 16, 0, 131097, 16, 0, 131098, 16, 0, 131099, 16, 0, 131100, 16, 0, 131101, 16, 0, 131102, 16, 0, 131103, 16, 0, 131104, 16, 0, 131105, 16, 0, 131106, 16, 0, 131107, 16, 0, 131108, 16, 0, 131109, 16, 0, 131110, 16, 0, 131111, 16, 0, 131112, 16, 0, 131113, 16, 0, 131114, 16, 0, 131115, 16, 0, 131116, 16, 0, 131117, 16, 0, 131118, 16, 0, 196608, 16, 0, 196609, 16, 0, 196610, 16, 0, 196611, 16, 0, 196612, 16, 0, 196613, 16, 0, 196614, 16, 0, 196615, 16, 0, 196616, 16, 0, 196617, 16, 0, 196618, 16, 0, 196619, 16, 0, 196620, 16, 0, 196621, 16, 0, 196622, 16, 0, 196623, 16, 0, 196624, 16, 0, 196625, 16, 0, 196626, 16, 0, 196627, 16, 0, 196628, 16, 0, 196629, 16, 0, 196630, 16, 0, 196631, 16, 0, 196632, 16, 0, 196633, 16, 0, 196634, 16, 0, 196635, 16, 0, 196636, 16, 0, 196637, 16, 0, 196638, 16, 0, 196639, 16, 0, 196640, 16, 0, 196641, 16, 0, 196642, 16, 0, 196643, 16, 0, 196644, 16, 0, 196645, 16, 0, 196646, 16, 0, 196647, 16, 0, 196648, 16, 0, 196649, 16, 0, 196650, 16, 0, 196651, 16, 0, 196652, 16, 0, 196653, 16, 0, 196654, 16, 0, 196655, 16, 0, 262144, 16, 0, 262145, 16, 0, 262146, 16, 0, 262147, 16, 0, 262148, 16, 0, 262149, 16, 0, 262150, 16, 0, 262151, 16, 0, 262152, 16, 0, 262153, 16, 0, 262154, 16, 0, 262155, 16, 0, 262156, 16, 0, 262157, 16, 0, 262158, 16, 0, 262159, 16, 0, 262160, 16, 0, 262161, 16, 0, 262162, 16, 0, 262163, 16, 0, 262164, 16, 0, 262165, 16, 0, 262166, 16, 0, 262167, 16, 0, 262168, 16, 0, 262169, 16, 0, 262170, 16, 0, 262171, 16, 0, 262172, 16, 0, 262173, 16, 0, 262174, 16, 0, 262175, 16, 0, 262176, 16, 0, 262177, 16, 0, 262178, 16, 0, 262179, 16, 0, 262180, 16, 0, 262181, 16, 0, 262182, 16, 0, 262183, 16, 0, 262184, 16, 0, 262185, 16, 0, 262186, 16, 0, 262187, 16, 0, 262188, 16, 0, 262189, 16, 0, 262190, 16, 0, 262191, 16, 0, 327680, 16, 0, 327681, 16, 0, 327682, 16, 0, 327683, 16, 0, 327684, 16, 0, 327685, 16, 0, 327686, 16, 0, 327687, 16, 0, 327688, 16, 0, 327689, 16, 0, 327690, 16, 0, 327691, 16, 0, 327692, 16, 0, 327693, 16, 0, 327694, 16, 0, 327695, 16, 0, 327696, 16, 0, 327697, 16, 0, 327698, 16, 0, 327699, 16, 0, 327700, 16, 0, 327701, 16, 0, 327702, 16, 0, 327703, 16, 0, 327704, 16, 0, 327705, 16, 0, 327706, 16, 0, 327707, 16, 0, 327708, 16, 0, 327709, 16, 0, 327710, 16, 0, 327711, 16, 0, 327712, 16, 0, 327713, 16, 0, 327714, 16, 0, 327715, 16, 0, 327716, 16, 0, 327717, 16, 0, 327718, 16, 0, 327719, 16, 0, 327720, 16, 0, 327721, 16, 0, 327722, 16, 0, 327723, 16, 0, 327724, 16, 0, 327725, 16, 0, 327726, 16, 0, 393216, 16, 0, 393217, 16, 0, 393218, 16, 0, 393219, 16, 0, 393220, 16, 0, 393221, 16, 0, 393222, 16, 0, 393223, 16, 0, 393224, 16, 0, 393225, 16, 0, 393226, 16, 0, 393227, 16, 0, 393228, 16, 0, 393229, 16, 0, 393230, 16, 0, 393231, 16, 0, 393232, 16, 0, 393233, 16, 0, 393234, 16, 0, 393235, 16, 0, 393236, 16, 0, 393237, 16, 0, 393238, 16, 0, 393239, 16, 0, 393240, 16, 0, 393241, 16, 0, 393242, 16, 0, 393243, 16, 0, 393244, 16, 0, 393245, 16, 0, 393246, 16, 0, 393247, 16, 0, 393248, 16, 0, 393249, 16, 0, 393250, 16, 0, 393251, 16, 0, 393252, 16, 0, 393253, 16, 0, 393254, 16, 0, 393255, 16, 0, 393256, 16, 0, 393257, 16, 0, 393258, 16, 0, 393259, 16, 0, 393260, 16, 0, 393261, 16, 0, 393262, 16, 0, 458752, 16, 0, 458753, 16, 0, 458754, 16, 0, 458755, 16, 0, 458756, 16, 0, 458757, 16, 0, 458758, 16, 0, 458759, 16, 0, 458760, 16, 0, 458761, 16, 0, 458762, 16, 0, 458763, 16, 0, 458764, 16, 0, 458765, 16, 0, 458766, 16, 0, 458767, 16, 0, 458768, 16, 0, 458769, 16, 0, 458770, 16, 0, 458771, 16, 0, 458772, 16, 0, 458773, 16, 0, 458774, 16, 0, 458775, 16, 0, 458776, 16, 0, 458777, 16, 0, 458778, 16, 0, 458779, 16, 0, 458780, 16, 0, 458781, 16, 0, 458782, 16, 0, 458783, 16, 0, 458784, 16, 0, 458785, 16, 0, 458786, 16, 0, 458787, 16, 0, 458788, 16, 0, 458789, 16, 0, 458790, 16, 0, 458791, 16, 0, 458792, 16, 0, 458793, 16, 0, 458794, 16, 0, 458795, 16, 0, 458796, 16, 0, 458797, 16, 0, 458798, 16, 0, 524288, 16, 0, 524289, 16, 0, 524290, 16, 0, 524291, 16, 0, 524292, 16, 0, 524293, 16, 0, 524294, 16, 0, 524295, 16, 0, 524296, 16, 0, 524297, 16, 0, 524298, 16, 0, 524299, 16, 0, 524300, 16, 0, 524301, 16, 0, 524302, 16, 0, 524303, 16, 0, 524304, 16, 0, 524305, 16, 0, 524306, 16, 0, 524307, 16, 0, 524308, 16, 0, 524309, 16, 0, 524310, 16, 0, 524311, 16, 0, 524312, 16, 0, 524313, 16, 0, 524314, 16, 0, 524315, 16, 0, 524316, 16, 0, 524317, 16, 0, 524318, 16, 0, 524319, 16, 0, 524320, 16, 0, 524321, 16, 0, 524322, 16, 0, 524323, 16, 0, 524324, 16, 0, 524325, 16, 0, 524326, 16, 0, 524327, 16, 0, 524328, 16, 0, 524329, 16, 0, 524330, 16, 0, 524331, 16, 0, 524332, 16, 0, 524333, 16, 0, 524334, 16, 0, 589824, 16, 0, 589825, 16, 0, 589826, 16, 0, 589827, 16, 0, 589828, 16, 0, 589829, 16, 0, 589830, 16, 0, 589831, 16, 0, 589832, 16, 0, 589833, 16, 0, 589834, 16, 0, 589835, 16, 0, 589836, 16, 0, 589837, 16, 0, 589838, 16, 0, 589839, 16, 0, 589840, 16, 0, 589841, 16, 0, 589842, 16, 0, 589843, 16, 0, 589844, 16, 0, 589845, 16, 0, 589846, 16, 0, 589847, 16, 0, 589848, 16, 0, 589849, 16, 0, 589850, 16, 0, 589851, 16, 0, 589852, 16, 0, 589853, 16, 0, 589854, 16, 0, 589855, 16, 0, 589856, 16, 0, 589857, 16, 0, 589858, 16, 0, 589859, 16, 0, 589860, 16, 0, 589861, 16, 0, 589862, 16, 0, 589863, 16, 0, 589864, 16, 0, 589865, 16, 0, 589866, 16, 0, 589867, 16, 0, 589868, 16, 0, 589869, 16, 0, 589870, 16, 0, 655360, 15, 0, 655361, 15, 0, 655362, 15, 0, 655363, 15, 0, 655364, 15, 0, 655365, 15, 0, 655366, 15, 0, 655367, 15, 0, 655368, 15, 0, 655369, 15, 0, 655370, 15, 0, 655371, 15, 0, 655372, 15, 0, 655373, 15, 0, 655374, 15, 0, 655375, 15, 0, 655376, 15, 0, 655377, 15, 0, 655378, 15, 0, 655379, 15, 0, 655380, 15, 0, 655381, 15, 0, 655382, 15, 0, 655383, 15, 0, 655384, 15, 0, 655385, 15, 0, 655386, 15, 0, 655387, 15, 0, 655388, 15, 0, 655389, 15, 0, 655390, 15, 0, 655391, 15, 0, 655392, 15, 0, 655393, 15, 0, 655394, 15, 0, 655395, 15, 0, 655396, 15, 0, 655397, 15, 0, 655398, 15, 0, 655399, 15, 0, 655400, 15, 0, 655401, 15, 0, 655402, 15, 0, 655403, 15, 0, 655404, 15, 0, 655405, 15, 0, 655406, 15, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="Left" type="StaticBody2D" parent="Level"]
position = Vector2( 500, 564 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level/Left"]
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Right" type="StaticBody2D" parent="Level"]
position = Vector2( 1600, 476 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level/Right"]
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Up" type="StaticBody2D" parent="Level"]
position = Vector2( 1067, 90 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level/Up"]
shape = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Down" type="StaticBody2D" parent="Level"]
position = Vector2( 1105, 510 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level/Down"]
shape = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Player" type="KinematicBody2D" parent="."]
position = Vector2( 637, 275 )
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="CharacterRig" type="Node2D" parent="Player"]
position = Vector2( 8, -41 )
scale = Vector2( 0.2, 0.2 )

[node name="Pelvis" type="Sprite" parent="Player/CharacterRig"]
position = Vector2( -38.8889, 66.6666 )
texture = ExtResource( 11 )

[node name="BoneTorso" type="Node2D" parent="Player/CharacterRig/Pelvis"]
position = Vector2( 2, 2 )
scale = Vector2( 1, 1 )

[node name="Torso" type="Sprite" parent="Player/CharacterRig/Pelvis/BoneTorso"]
position = Vector2( 16, -127 )
scale = Vector2( 1, 1 )
texture = ExtResource( 19 )
__meta__ = {
"_edit_lock_": true
}

[node name="BoneUpperLeftArm" type="Node2D" parent="Player/CharacterRig/Pelvis/BoneTorso/Torso"]
position = Vector2( -59.1113, -31.6666 )

[node name="UpperLeftArm" type="Sprite" parent="Player/CharacterRig/Pelvis/BoneTorso/Torso/BoneUpperLeftArm"]
position = Vector2( -35, 30 )
z_index = 1
texture = ExtResource( 10 )

[node name="LowerLeftArm" type="Sprite" parent="Player/CharacterRig/Pelvis/BoneTorso/Torso/BoneUpperLeftArm/UpperLeftArm"]
position = Vector2( -69.1113, 115.667 )
texture = ExtResource( 21 )

[node name="BoneUpperRightArm" type="Node2D" parent="Player/CharacterRig/Pelvis/BoneTorso/Torso"]
position = Vector2( 67.3333, -34.1111 )
z_index = -1

[node name="UpperRightArm" type="Sprite" parent="Player/CharacterRig/Pelvis/BoneTorso/Torso/BoneUpperRightArm"]
position = Vector2( 30.6457, 41.3623 )
texture = ExtResource( 18 )
__meta__ = {
"_edit_lock_": true
}

[node name="LowerRightArm" type="Sprite" parent="Player/CharacterRig/Pelvis/BoneTorso/Torso/BoneUpperRightArm/UpperRightArm"]
position = Vector2( 37.9097, 96.0822 )
texture = ExtResource( 17 )

[node name="Bow" type="Sprite" parent="Player/CharacterRig/Pelvis/BoneTorso/Torso/BoneUpperRightArm/UpperRightArm/LowerRightArm"]
position = Vector2( 5.55569, 22.2222 )
texture = ExtResource( 16 )

[node name="BoneNeck" type="Node2D" parent="Player/CharacterRig/Pelvis/BoneTorso/Torso"]

[node name="Neck" type="Sprite" parent="Player/CharacterRig/Pelvis/BoneTorso/Torso/BoneNeck"]
position = Vector2( 34, -78.5555 )
texture = ExtResource( 20 )

[node name="Head" type="Sprite" parent="Player/CharacterRig/Pelvis/BoneTorso/Torso/BoneNeck/Neck"]
position = Vector2( -33.3335, -72.222 )
texture = ExtResource( 22 )

[node name="BoneUpperRightLeg" type="Node2D" parent="Player/CharacterRig/Pelvis"]

[node name="UpperRightLeg" type="Sprite" parent="Player/CharacterRig/Pelvis/BoneUpperRightLeg"]
position = Vector2( -65, 46.9999 )
rotation = 0.156739
scale = Vector2( 1, 1 )
z_index = -1
texture = ExtResource( 12 )

[node name="LowerRightLeg" type="Sprite" parent="Player/CharacterRig/Pelvis/BoneUpperRightLeg/UpperRightLeg"]
position = Vector2( -16, 126 )
z_index = -1
texture = ExtResource( 13 )
__meta__ = {
"_edit_lock_": true
}

[node name="BoneUpperLeftLeg" type="Node2D" parent="Player/CharacterRig/Pelvis"]
position = Vector2( 53.8889, 18.3335 )
z_index = -1

[node name="UpperLeftLeg" type="Sprite" parent="Player/CharacterRig/Pelvis/BoneUpperLeftLeg"]
position = Vector2( 30.0002, 40 )
scale = Vector2( 1, 1 )
texture = ExtResource( 14 )
__meta__ = {
"_edit_lock_": true
}

[node name="LowerLeftLeg" type="Sprite" parent="Player/CharacterRig/Pelvis/BoneUpperLeftLeg/UpperLeftLeg"]
position = Vector2( 16.6665, 94.4446 )
z_index = -1
texture = ExtResource( 15 )
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Player/CharacterRig"]
anims/Idle = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 791, 165 )
texture = ExtResource( 3 )

[node name="Griffon" type="Sprite" parent="."]
position = Vector2( 854, 379 )
texture = ExtResource( 4 )

[node name="EnemyCollection" type="Node2D" parent="."]
visible = false

[node name="Enemy" type="KinematicBody2D" parent="EnemyCollection"]
position = Vector2( 1519, 308 )
collision_mask = 3
script = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyCollection/Enemy"]
position = Vector2( -1.5, 4 )
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="EnemyCollection/Enemy"]
texture = ExtResource( 7 )
__meta__ = {
"_edit_lock_": true
}

[node name="Enemy2" type="KinematicBody2D" parent="EnemyCollection"]
position = Vector2( 1477, 367 )
collision_mask = 3
script = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyCollection/Enemy2"]
position = Vector2( -1.5, 4 )
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="EnemyCollection/Enemy2"]
texture = ExtResource( 7 )
__meta__ = {
"_edit_lock_": true
}

[node name="Enemy3" type="KinematicBody2D" parent="EnemyCollection"]
position = Vector2( 1493, 255 )
collision_mask = 3
script = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyCollection/Enemy3"]
position = Vector2( -1.5, 4 )
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="EnemyCollection/Enemy3"]
texture = ExtResource( 7 )
__meta__ = {
"_edit_lock_": true
}

[node name="Aimer" type="Sprite" parent="."]
position = Vector2( 1257, 258 )
texture = ExtResource( 9 )

[node name="Camera" type="Camera2D" parent="."]
visible = false
offset = Vector2( 0, 250 )
current = true
script = ExtResource( 6 )
